# toy-renderer

./: .gitignore  CMakeLists.txt  README.md
assets/GLshaders/: P3.vs  P3N3.vs  P3N3U2.vs  P3N3U2T3B3.vs  P3N3U2T3B3_blinn.fs  P3N3U2T3B3_deferred.fs  P3N3U2T3B3_normal.fs  P3N3U2T3B3_phong.fs  P3N3U2T3B3_torrance.fs  P3N3U2_blinn.fs  P3N3U2_normal.fs  P3N3U2_phong.fs  P3N3_blinn.fs  P3N3_normal.fs  P3N3_phong.fs  cubemap.fs  cubemap.vs  deferred_normal.fs  deferred_phong.fs  screen.vs
cmake/modules/: FindAssimp.cmake  FindGLAD.cmake  FindGLFW.cmake  FindSTB.cmake
src/: CMakeLists.txt  defines.h  defines.h.in  main.cpp
src/geometry/: Matrix44.cpp  Matrix44.h  Normal3.h  Point2.h  Point3.h  Transform.h  Vector2.h  Vector3.h  geometry.h
src/loader/: OBJLoader.cpp  OBJLoader.h
src/scene/: Cubemap.cpp  Cubemap.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshUtil.cpp  MeshUtil.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/utilities/: Camera.cpp  Camera.h  CubeDepthFB.cpp  CubeDepthFB.h  CubeFB.cpp  CubeFB.h  DeferredRenderingFB.cpp  DeferredRenderingFB.h  FrameBuffer.cpp  FrameBuffer.h  OffScreenFB.cpp  OffScreenFB.h  SSAOFB.cpp  SSAOFB.h  Shader.cpp  Shader.h  Spectrum.h
src/window/: InputManager.cpp  InputManager.h  Window.cpp  Window.h
